# russia_forecasting

./: .gitignore  README.md  config.py  eng_ru_names_dict.py  giga_data_prep_07_2025.xlsx  main.py  metrics.ipynb  mfbvar.R  pyproject.toml  requirements.txt  var_naming.xlsx
data/: cbr_data.xlsx  fred_data.xlsx  giga_data_mfbvar_m.csv  giga_data_mfbvar_q.csv  giga_data_ready_07_2025.xlsx  quarterly_data.xlsx
metrics/: metrics.py
models/: dfm.py  gb.py  ngb.py  tabnet.py
pipelines/: download_prepared_raw_data.py  run_dfm_test.py  run_gb_test.py  run_metrics.py  run_ngb_test.py  run_tabnet_test.py
preds/: dfm_pred_test.csv  gb_pred_test.csv  metrics.csv  mfbvar_pred_test.csv  ngb_pred_test.csv  tabnet_pred_test.csv
preds_len24/: dfm_pred_test.csv  gb_pred_test.csv  metrics.csv  mfbvar_pred_test.csv  ngb_pred_test.csv  tabnet_pred_test.csv
preprocess_data/: datae2e.py  gigadata_parser.py  lags_service.py  montlhy_to_quarterly.py  prepare_data.py  splitter_service.py
