[project]
name = "russian-forecasting-ml-vs-classic"
version = "0.1.0"
description = "Set of ML and classic econometrics models for forecasting main Russian macroeconomic variables"
authors = [
    {name = "fokinikita", email = "fokinikita@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.23,<2.0",
    "pandas>=2.0,<3.0",
    "polars>=0.20",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "catboost>=1.2",
    "ngboost>=0.5",
    "pytorch-tabnet>=4.1",
    "attrs (>=25.4.0,<26.0.0)",
    "fastexcel (==0.14.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
package-mode = false  # <- отключаем установку проекта как пакета

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (==22.12.0)",
    "isort (==5.10.1)"
]
